# tuitui

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  test.rs
examples/: better.rs  mascot.rs
src/: app.rs  components.rs  event.rs  inputs.rs  lib.rs  macros.rs  ui.rs
src/components/: ascii_art.rs  mod.rs  separator.rs  text.rs  widget.rs
