[package]
name = "tuitui"
version = "0.1.1"
edition = "2021"
description = "Build terminal interfaces faster. A batteries-included TUI framework for Rust with low boilerplate and a rich component ecosystem."
authors = ["tayenx3 <kontajiousgd00@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tayenx3/tuitui"

[lib]

[dependencies]
convert_case = "0.8.0"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
strum = "0.27.2"
strum_macros = "0.27.2"
